--- a/Carbook/pom.xml
+++ b/Carbook/pom.xml
@@ -132,14 +132,14 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-iostreams</artifactId>
-            <version>2.8.2</version>
+            <version>2.8.2</version><!--$NO-MVN-MAN-VER$-->
         </dependency>
         
         <!-- thymeleaf mail -->
         <dependency>
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf-spring5</artifactId>
-			<version>3.0.11.RELEASE</version>
+			<version>3.0.11.RELEASE</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
         
     </dependencies>
