--- a/Book-Tickets/package.json
+++ b/Book-Tickets/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^2.9.4",
     "ng-click-outside": "^7.0.1",
     "ng2-charts": "^2.4.2",
+    "ngx-paypal": "^7.0.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
